--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>test</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../style/main.css">
-    <link href='//fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
+    <meta charset="UTF-8"></meta>
+    <title>Demo App</title>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="/style/main.css"></link>
+    <link href='//fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'></link>
 </head>
-<body>
+<body onload="init()">
 
     <header>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand exp-font">
-                        Tlen-console
+                        Console
                     </a>
                 </div>
             </div>
@@ -57,6 +57,19 @@
                     Garbage Collection
                 </button>
             </div>
+            <div class="separator">
+                <button class="btn btn-warning" onclick="ramLoad(100)">
+                    Generate 100MiB Object
+                </button>
+                <button class="btn btn-danger" onclick="ramLoad(1024)">
+                    Generate 1GiB Object
+                </button>
+            </div>
+            <div class="separator">
+                <button class="btn btn-danger" onclick="cpuLoad()">
+                    Generate CPU Load
+                </button>
+            </div>
         </div>
     </div>
 
@@ -64,8 +77,8 @@
         Copyright 2k17 Shit development
     </footer>
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../script/main.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/script/main.js"></script>
 </body>
 </html>
