changed file hierarchy

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>test</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../style/main.css">
-    <link href='//fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
+    <meta charset="UTF-8"></meta>
+    <title>Demo App</title>
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css"></link>
+    <link rel="stylesheet" href="/style/main.css"></link>
+    <link href='//fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'></link>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand exp-font">
-                        Tlen-console
+                        Console
                     </a>
                 </div>
             </div>
@@ -64,8 +64,8 @@
         Copyright 2k17 Shit development
     </footer>
 
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="../script/main.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/script/main.js"></script>
 </body>
 </html>
